fixed icons. Need to position correctly submenus in mobile screen and the shadow that overflows

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -157,6 +157,11 @@ body {
                 a:hover {
                     color: variables.$almost-Black;
                 }
+
+                //doesn't work!!
+                .icon:hover {
+                    filter: variables.$almost-Black;
+                }
                 
                 .features-ul {
                     @include submenu(50px, 90px);
@@ -168,6 +173,7 @@ body {
                     display: none;
                 }
 
+                //activating the submenues:
                 .submenu-active {
                     display: block;
                 }
@@ -234,7 +240,7 @@ body {
         justify-content: space-between;
         
         @media screen and (max-width: 900px) {
-            width: 50%;
+            width: 100%;
             flex-direction: column;
             margin: 0 auto;
          }
@@ -298,7 +304,6 @@ body {
     
                     @media screen and (max-width: 590px) {
                         font-size: 0.8em;
-                        border: 1px solid firebrick;
                     }
                 }
     
@@ -318,7 +323,7 @@ body {
             }
     
             .brands {
-                margin: 0 4.5em;
+                margin: 0 4.5em 3em 4.5em;
                 display: flex;
                 justify-content: space-around;
                 
@@ -326,26 +331,45 @@ body {
                 img {
                     width: 3.3em;
                     height: 1.4em;
+
+                    @media (max-width: 500px) {
+                        width: 1.3em;
+                        height: 1em;
+                    }
                 }
     
-                @media screen and (max-width: 900px) {
+                @media (max-width: 900px) {
                     margin: 1em 0 4em 0;
+                }
+
+                @media (max-width: 500px) {
+                    
+                    margin: 2em auto;
                 }
             }
         }
     
         .img-container {
-            width: 31%;
+            width: 32%;
+            max-height: 800px;
             margin: 3em;
             margin-right: 5em;
            
+            background-image: url(../images/image-hero-desktop.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
     
             @media screen and (max-width: 900px) {
                 order: 1;
                 width: 100%;
-                height: auto;
+                height: 400px;             
                 margin: 0 auto;
-                object-fit: contain;
+              
+                background-image: url(../images/image-hero-mobile.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
             }
         }
     }
